--- a/style.css
+++ b/style.css
@@ -528,6 +528,7 @@ body {
     box-shadow: 0 0 25px rgba(183, 183, 183, 0.6);
     transition: transform 0.4s ease, box-shadow 0.4s ease;
     animation: imageEntrance 1s ease-in-out both;
+    background-color: rgb(18, 18, 18);
 }
 
 .about-image img:hover {
