--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ body.dark-mode {
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 body {
